# rust-mq-playground

./: .gitignore  Dockerfile  Dockerfile.staging  LICENSE  README.md  delete-machine.sh  killall.fish  mix.exs  start-machine.sh  test.html
docs/: CNAME  index.html
docs/js/: index.js
frontend/: index.html
frontend/js/: index.js
lib/: idle_timer.ex  router.ex  rust_mq_api.ex  server_app.ex
template/: Cargo.toml
test/: rust_mq_api_test.exs
