[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"

[profile.release]
opt-level = 0
overflow-checks = false
debug = false
lto = false
panic = "abort"
codegen-units = 128
incremental = true
